# poetry-bug-reconstruction

./: .gitignore  01-start-devpi-server.sh  02-publish-pkgs.sh  README.md  pyproject.toml
.github/workflows/: bug-reconstruction.yaml
gen-config/: crontab  devpi.service  net.devpi.plist  nginx-devpi-caching.conf  nginx-devpi.conf  supervisor-devpi.conf  windows-service.txt
pkg-a/: pyproject.toml
pkg-b/: pyproject.toml
pkg-c/: pyproject.toml
